index.css
body {
  padding-top: 50px;
  background-color: #003c51;
  font-family: 'Bangers', cursive;
  color: white;
}

main {
  text-align: center;
}

h1 {
  font-family: 'Bangers', cursive;
  color: white;
  font-size: 4rem;
  letter-spacing: 3px;
}

.result-header {
  font-size: 2em;
  color: white;
  letter-spacing: 2px;
}

.hidden {
  display: none;
}

.date {
  text-align: center;
  margin-bottom: 15px;
}

.js-ebay-search {
  margin-bottom: 20px;
}

a {
  text-decoration: none;
  color: white;
}

.listing-title {
  height: 50px;
  letter-spacing: 1.3px;
  vertical-align: top;
  color: white;
}


.listing-image{
  padding: 5px;
  max-width: 400px;
  margin: auto;
}

.js-ebay-results {
  background-color: grey;
  margin: auto;
  min-width: 300px;
  min-height: 80%;
  height: 80%;
  border: 4px white solid;
}

.load-box{
  display: none;
  font-family: 'Bangers', cursive;
  color: white;
  text-align: center;
  font-size: 1.4em;
  background-color: grey;
  border: 4px white solid;
  position: fixed;
  width: 30%;
  left: 0;
  right: 0;
  margin: 0 auto;
  z-index: 9999;
}

.work-box{
  border: 4px white solid;
  padding: 15px;
  margin: 10px;
}
.howto{
  font-family: 'Roboto', sans-serif;
}
.eb-button {
  margin-bottom: 20px;
}

.marv-pic {
  border: 4px solid white;
}

.eb-error {
  font-family: 'Bangers', cursive;
  text-align: center;
  font-size: 1.4em;
  background-color: grey;
  margin: auto;
  padding: 10px;
  min-width: 300px;
  height: 100%;
  z-index: 9999;
}

.eb-pic {
  display: block;
  width: 250px;
  margin: auto;
}

.eb-light {
  padding: 10px;
}

.eb-title{
  text-align: center;
}

.eb-results{
  font-family: 'Bangers', cursive;
  letter-spacing: 1.3px;
  vertical-align: top;
  color: white;
}
/* Removes the clear button from date inputs */
input[type="date"]::-webkit-clear-button {
    display: none;
}

/* Removes the spin button */
input[type="date"]::-webkit-inner-spin-button {
    display: none;
}

/* Always display the drop down caret */
input[type="date"]::-webkit-calendar-picker-indicator {
    color: #2c3e50;
}

input[type="date"]::before {
  content: attr(placeholder);
  width: 100%;
}

input[type="date"]:focus::before,
input[type="date"]:valid::before { display: none }

/* A few custom styles for date inputs */
input[type="date"] {
    appearance: none;
    -webkit-appearance: none;
    color: black;
    font-family: "Roboto", sans-serif;
    font-size: 18px;
    border:1px solid #ecf0f1;
    background:#ecf0f1;
    padding:5px;
    display: inline-block !important;
    visibility: visible !important;
}

input[type="date"], focus {
    color: black;
    box-shadow: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
}

.ebayButton {
	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
	box-shadow:inset 0px 1px 0px 0px #ffffff;
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
	background:-moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
	background:-webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
	background:-o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
	background:-ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
	background-color:#ffffff;
	-moz-border-radius:6px;
	-webkit-border-radius:6px;
	border-radius:6px;
	border:1px solid #dcdcdc;
	display:inline-block;
	cursor:pointer;
	color:#666666;
	font-family: 'Bangers', cursive;
	font-size:15px;
	font-weight:bold;
	padding:6px 24px;
	text-decoration:none;
	text-shadow:0px 1px 0px #ffffff;
  margin-bottom: 10px;
}
.ebayButton:hover {
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
	background:-moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
	background:-webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
	background:-o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
	background:-ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0);
	background-color:#f6f6f6;
}
.ebayButton:active {
	position:relative;
	top:1px;
}

